Change log for Bos Wars
-----------------------

Development version:
- Added particle system explosions (Jimmy Salmon)
- Increase the damage of nuke missiles (Francois Beerten)
- Abort with an error when using an unknown unittype in ai scripts (Francois Beerten)
- Fix bug with buildings under construction that could attack (Francois Beerten)
- Allow recycling of friendly and ennemy buildings (Francois Beerten)
- Replaced fire and explosion graphics (TimberDragon)
- Add "A Bridge Too Far" map (TimberDragon, Francois Beerten)
- Fix crash with non-square maps (Francois Beerten)
- Escape lua strings when saving (Jimmy Salmon)
- Added popups for button panel buttons (Jimmy Salmon)
- Morels and antharus are harvestable (Francois Beerten)
- Localized tips and keystroke help menus (Jimmy Salmon)
- Faster map drawing when using an image map (Jimmy Salmon)
- Convert some images to display format for faster drawing (Jimmy Salmon)

Version 2.4.1 (2007 9 2):
- Fixed load/save bug (Jimmy Salmon)
- Move to new map layout (Francois Beerten)
- Added Portuguese translation (Giovanni Oliveira)
- Made the language options menu more dynamic (Francois Beerten)
- Added the ability to change directories in the file browser (Jimmy Salmon)
- Using OpenGL is a run-time option (Jimmy Salmon)
- Fixed compilation on OS X (Francois Beerten)

Version 2.4.0 (2007 8 6):
- Fixed bug loading a save game where a unit contains a unit that hasn't been loaded yet (Jimmy Salmon)
- Add Czech translation (Radim Luža)
- Fix building of static builds (Francois Beerten)
- New introduction video (Xanax)
- Added new tutorial (Jimmy Salmon)
- Fixed clipped rectangle drawing with OpenGL (Jimmy Salmon)
- Highlight selected listbox item so it's easier to see (Nehal Mistry)
- Improve the detection of lua in SConstruct (Francois Beerten)
- Add detection of strnlen in SConstruct (Francois Beerten)

Version 2.4.0 prerelease (2007 7 3):
- Added game types (Jimmy Salmon)