@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Added random-frame to animations (Jimmy Salmon)
 - Added particle system explosions (Jimmy Salmon)
 - Increase the damage of nuke missiles (Francois Beerten)
 - Abort with an error when using an unknown unittype in ai scripts (Francois Beerten)
